fix: fixed some paddings of main content on mobile and desktop design so it all fits in the viewport

--- a/scss/layout/_maincontent.scss
+++ b/scss/layout/_maincontent.scss
@@ -504,7 +504,7 @@ $mix-colors: (
     .main-cards {
         border-radius: 1rem;
         border: 0.1rem solid #202020;
-        padding: 2.5rem;
+        padding: 0 2.5rem;
         margin-top: 0;
         &-row {
             overflow-y: hidden;
